# custom-speckit

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/commands/: speckit.approve-delta.md  speckit.plan.md  speckit.reject-delta.md  speckit.review-delta.md  speckit.specify.md  speckit.tasks.md
.cursor/rules/: custom-speckit-workflow.mdc  strict-development-rules.mdc
.deltas/: README.md
.specify/features/: README.md
.specify/scripts/bash/: compare-specs.sh  create-new-feature.sh  get-version.sh  merge-delta-spec.sh
.specify/templates/: delta-spec-template.md
docs/: README-detailed.md  README-simple.md
scripts/: upload-local.sh
specs/: README.md
src/custom_speckit/: __init__.py  cli.py
src/custom_speckit/commands/: __init__.py  init.py  update.py
src/custom_speckit/templates/.cursor/commands/: speckit.analyze.md  speckit.approve-delta.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.reject-delta.md  speckit.review-delta.md  speckit.specify.md  speckit.tasks.md
src/custom_speckit/templates/.cursor/rules/: custom-speckit-workflow.mdc  git-commit-guidelines.mdc  strict-development-rules.mdc  tdd-augmented-coding.mdc
src/custom_speckit/templates/.specify/.deltas/: README.md
src/custom_speckit/templates/.specify/memory/: constitution.md
src/custom_speckit/templates/.specify/scripts/bash/: check-prerequisites.sh  common.sh  (+6 more)
src/custom_speckit/templates/.specify/templates/: tdd-cycle.md
src/custom_speckit/utils/: __init__.py  file_manager.py  version.py
