[project]
name = "custom-speckit"
version = "1.4.1"
description = "AI 기반 명세 주도 개발 도구 - 자동 언어 감지와 한글/영어 이중 지원"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Custom Speckit Contributors"}
]
keywords = ["spec", "ai", "development", "cursor", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/hotseller/custom-speckit"
Repository = "https://github.com/hotseller/custom-speckit"
Documentation = "https://github.com/hotseller/custom-speckit#readme"

[project.scripts]
custom-speckit = "custom_speckit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_speckit"]

[tool.hatch.build.targets.wheel.shared-data]
"src/custom_speckit/templates" = "custom_speckit/templates"

[tool.uv]
dev-dependencies = []

